Paging and Sorting in Post Service